[gd_scene load_steps=5 format=3 uid="uid://bh1k1lb23i45g"]

[ext_resource type="Script" path="res://scenes/menu/rewards_menu.gd" id="1_ya323"]

[sub_resource type="Animation" id="Animation_xjdni"]
resource_name = "write_message"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/MessageLabel:visible_characters")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 300]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e2n3d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_px1qc"]
_data = {
"RESET": SubResource("Animation_e2n3d"),
"write_message": SubResource("Animation_xjdni")
}

[node name="RewardsMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_ya323")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_px1qc")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"AlternativePanelContainer3"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.775234, 0.473382, 0.337297, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.0862745, 0.0588235, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 27
text = "The results of your actions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="MessageLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(516, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0.775234, 0.473382, 0.337297, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.0862745, 0.0588235, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 18
text = "You've gathered plenty of wood to keep your fire going yet another night. 

There was a misterious backpack lost in the woods, inside of it was a battery and a flare gun.

Your sanity is going down every day."
autowrap_mode = 2
visible_characters = 6
visible_ratio = 0.0288462

[node name="ConfirmButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 36
text = " Continue "
